<resources>
    <string name="app_name">coyni</string>
    <string name="internet">Check your internet connection</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="emailotpmsg">We have sent you a 6-digit code sent to the register email address: </string>
    <string name="remembertxt">   Remember Me</string>
    <string name="forgotpwdtxt">Forgot Password</string>
    <string name="retrievemail">Retrieve Email</string>
    <string name="epincorrecttext">Email or password is incorrect</string>
    <string name="epincorrectdescri">Either your email or password is incorrect. Please try again, or use forgot password and retrieve email.</string>
    <string name="faceidnotavaitxt">Face ID Not available</string>
    <string name="faceidnotavaidescri">Please Log in and go to your profile setting to set up the Face ID.</string>
    <string name="touchidnotavaidescri">Please Log in and go to your profile setting to set up the Touch ID.</string>
    <string name="faceiddisable">We’ve detected a change to this device. Please Log in and go to your profile setting to set up the Face ID.</string>
    <string name="touchiddisable">We’ve detected a change to this device. Please Log in and go to your profile setting to set up the Touch ID.</string>
    <string name="title_activity_customer_profile_active">CustomerProfileActive</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="forgot_pin"><u>Forgot PIN</u></string>
    <string name="additional_documents">Additional Documents </string>
    <string name="uploaded_articles">Uploaded Articles of Incorporation</string>
    <string name="previous">Previous</string>
    <string name="chpwdmsg">Looks like it’s time to update your password. For security purposes, we need you to update your old password.</string>
    <string name="user">User</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="retrieveemailcontent">To help you retrieve your email, we will need your help. Please enter the information below.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="processing">Processing…</string>
    <string name="processingcontent">We are looking for your account in the moment. Thank you for your patience.</string>
    <string name="sorrytxt">Sorry We Can’t Find Anything on File</string>
    <string name="tryagain">Try Again</string>
    <string name="thank_you_for_submission">Thank you for your submission to the coyni review\nteam. No additional information needed at this time.\nPlease check back here for updates. If you wish to</string>
    <string name="coyni_account">coyni Account</string>
    <string name="cancel_merchant">cancel your merchant application </string>
    <string name="thank_you_for_intrest">Thank you for your interest in coyni. Please allow\nus up to 3 business days for further review of\nyour account. Within that time you may receive a\nnotification and/or email if further information is\nneeded.</string>
    <string name="foundacc">We’ve Found Your Account!</string>
    <string name="belowtxtre">Click the Link below to log in</string>
    <string name="jona_gmail_com">Jona***@gmail.com</string>
    <string name="cu_profile_name">Jonathan Joestar</string>
    <string name="accountid">Account ID </string>
    <string name="status_unverified">Account Status: </string>
    <string name="unveri">Unverified</string>
    <string name="cp_almost">You’re almost there!</string>
    <string name="cp_setup">Finish the set up your account in less than 5 min.</string>
    <string name="cp_getstarted">Get Started</string>
    <string name="setting">Settings</string>
    <string name="setting_userdetails">User Details</string>
    <string name="setting_payment">Payment Methods</string>
    <string name="setting_pref">Preferences</string>
    <string name="account">Account</string>
    <string name="account_limits">Account Limits</string>
    <string name="account_agree">Agreements</string>
    <string name="get_help">Get Help</string>
    <string name="security">Security</string>
    <string name="security_resetpin">"Reset PIN Code "</string>
    <string name="security_faceid">Face ID Setting</string>
    <string name="security_touchid">Touch ID Setting</string>
    <string name="security_changepass">Change Password</string>
    <string name="faceidsetuptxt">Set Up Face ID</string>
    <string name="faceidsetup">Enable Face ID to Use face recognition to complete payments quickly and securely.</string>
    <string name="sepupid">Set Up Face ID</string>
    <string name="sepupidnotnoe">Not Now</string>
    <string name="setupnotnowBtn">Not Now</string>
    <string name="all_done">All Done</string>
    <string name="alldone_success">Your bank account has been successfully authorized and added to your payment \nmethods.</string>
    <string name="merchant_shared_message">Try scanning the code using a Personal coyni account.</string>
    <string name="uploadid">Fill out your information and Upload ID</string>
    <string name="uploadid_cust">Upload ID and fill out your information</string>
    <string name="contentuploadid">Upload and Scan ID: Driver’s License,\nState-Issued ID, or Passport.</string>
    <string name="digits4">Last 4 digits</string>
    <string name="ssnlast">SSN Last 4 Digits</string>
    <string name="dobol">Date of Birth</string>
    <string name="dobhint">Pick your date of birth</string>
    <string name="onfocusString"> </string>
    <string name="identityInstruction">Enter your mailing address of your primary residence. Please do not use a PO Box.</string>
    <string name="submitbtn">Submit</string>
    <string name="exitbtn">Exit</string>
    <string name="addNewbusinessaccountdba">Select the Company you wish to add the new DBA below.\nYou will need to complete a new Merchant Application for each DBA you add.</string>
    <string name="addDBAButton">Add DBA</string>
    <string name="complete_application_step_by_step">Complete the merchant application step by step in 5 min</string>
    <string name="businessProfileAccountItemChildImage">Business Profile account Sub Profile Image</string>
    <string name="businessProfileAccountItemImage">Business Profile account Profile Image</string>
    <string name="businessProfileAccountExpandDownArrow">Business Profile account Profile Expand Down Arrow</string>
    <string name="unable_to_get_document">Failed to get the document. Please try again</string>
    <string name="transAmountAlert">\'From Amount\' should not be greater than \'To Amount\'</string>
    <string name="email_field_alert">Please enter a valid Email</string>
    <string name="please_use_active_account">Please use active user account to make payments</string>
    <string name="identity">Identity Verification</string>
    <string name="MaillingAddress">Mailing Address</string>
    <string name="mailingaddress1">Mailing Address Line 1</string>
    <string name="mailingaddress2">Mailing Address Line 2 (Optional)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip Code</string>
    <string name="country">Country</string>
    <string name="contentuploadidsuccess">Uploaded Driver’s License</string>
    <string name="mailingaddresshint">Street Address</string>
    <string name="mailingaddresshint2">Apt#, Suit, Floor</string>
    <string name="statehint">State</string>
    <string name="cityhint">City</string>
    <string name="ziphint">Zip Code</string>
    <string name="uploaded">Uploaded </string>
    <string name="countryhint">United States</string>
    <string name="contentidtype">Choose ID Type</string>
    <string name="driverlicense">Driver’s License</string>
    <string name="pptext">Passport</string>
    <string name="sic">State-Issued Card</string>
    <string name="ivunder_review">Thank you for your interest in coyni. Please allow us up to 3 business days for further review of your account. Within that time you may receive a notification and/or email if further information is needed.</string>
    <string name="ivtitle">Identity Verification Under Review</string>
    <string name="done">Done</string>
    <string name="customer_under_review">Our team is still reviewing your account. This process may take up to 3 business days.</string>
    <string name="under_review_dispute">Your account is Under Review due to a dispute we have received on your behalf.</string>
    <string name="add_ac">Additional Action Required</string>
    <string name="add_actioncontent">We are unable to match the last 4 digits of your Social Security number.\n \nIn order to continue, please enter your full Social Security Number and click submit.</string>
    <string name="ssnhint">•••-••-••••</string>
    <string name="ssnout">SSN</string>
    <string name="submit">Submit</string>
    <string name="iv_success">Identity Verification Successful</string>
    <string name="iv_success_content">Thank you for verifying your identification and trusting us as your token account platform. Lastly, add a payment method to your account profile.</string>
    <string name="iv_failed">Identity Verification Canceled</string>
    <string name="iv_declined">Identity Verification Failed</string>
    <string name="acc_terminated_content">Please contact coyni customer support if you need further assistance.</string>
    <string name="ok">OK</string>
    <string name="try_again">Try Again</string>
    <string name="contact_us"><u>Contact Us</u></string>
    <string name="lastmonth">Last Month</string>
    <string name="remove_team_members">Remove Team Members</string>
    <string name="account_permissions">Are you sure to remove %1$s, will be permanently removed from your user list and all lose access to their shared account permissions</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="to_token_account">To Token Account</string>
    <string name="authorization_failed">Authorization Failed</string>
    <string name="card_authorization_failed">The card authorization failed due to error \ncode: {error code - error code \ndescription}. Please try again.</string>
    <string name="identify_verification_failed">Identity Verification \nFailed</string>
    <string name="thank_you_for_your_interest">Thank you for your interest in coyni. Please contact coyni customer support if you need further assistance.</string>
    <string name="support"><u>support.</u></string>
    <string name="today_current_batch">Today(Current batch)</string>
    <string name="yesterday">Yesterday</string>
    <string name="month_to_date">Month to Date(MTD)</string>
    <string name="custom_date_range">Custom Date Range</string>
    <string name="back_button">back button</string>
    <string name="get_help_description">Send an email to our support team at support@coyni.com for any questions, issues, or feedback. Please include the following to expedite our response:</string>
    <string name="our_support_team_is_here_for_you">Our support team is here for you.</string>
    <string name="need_help_with_coyni">Need help with coyni?</string>
    <string name="skip">Skip</string>
    <string name="add_debit_or_credit_card">Add Debit or Credit Card</string>
    <string name="account_created">Account Created!</string>
    <string name="your_coyni_account_is_now_ready_get_started_by_adding_a_debit_or_credit_card">Your coyni account is now ready. Get started by adding a debit or credit card.</string>
</resources>