<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_11sdp"
    android:background="@drawable/bg_white_color">

    <ImageView
        android:id="@+id/failedIV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_31sdp"
        android:contentDescription="@string/to_token_account"
        android:src="@drawable/ic_failed" />

    <TextView
        android:id="@+id/tvAFailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/identify_verification_failed"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_9sdp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/thank_you_for_your_interest"
        android:lineHeight="@dimen/_16sdp"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/_11ssp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/primary_green"
        android:textAlignment="center"/>

</LinearLayout>