<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_21sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_100sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_success_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_21sdp"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/account_created"
            android:textColor="@color/primary_black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_40sdp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:text="@string/your_coyni_account_is_now_ready_get_started_by_adding_a_debit_or_credit_card"
            android:textColor="@color/primary_black"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAddCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/add_debit_or_credit_card"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_40sdp"/>
    </LinearLayout>

</RelativeLayout>