<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_rounded_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_28sdp"
            android:background="@drawable/bg_core_colorfill" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_21sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/remove_team_members"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_21sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_marginEnd="@dimen/_21sdp"
        android:fontFamily="@font/opensans_semibold"
        android:gravity="start"
        android:lineHeight="@dimen/_21ssp"
        android:text="@string/account_permissions"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/_12ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:layout_marginHorizontal="@dimen/_21sdp"
        android:layout_marginTop="@dimen/_21sdp"
        android:layout_marginBottom="@dimen/_27sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_corefull"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_core_colorfill"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

</LinearLayout>
