<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_21sdp"
    android:paddingRight="@dimen/_21sdp"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_44sdp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/epincorrecttext"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/epincorrectdescri"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/_12ssp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEmailOK"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginTop="54dp"
        app:cardBackgroundColor="@color/primary_green"
        app:cardCornerRadius="@dimen/_22sdp">

        <TextView
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp" />


</LinearLayout>