<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyClose"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <ImageView
        android:id="@+id/relogoWeFoundAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_foundimg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/foundacc"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/belowtxtre"
        android:textAlignment="center"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/text_size_18sp" />

    <LinearLayout
        android:id="@+id/llCoyniAct"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_card"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profilelogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/coyni_account"
                android:textAlignment="textStart"
                android:textColor="@color/primary_black"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/jona_gmail_com"
                android:textAlignment="textStart"
                android:textColor="#767676"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rightarrow" />

    </LinearLayout>
</LinearLayout>